--- a/zoia_lib/UI/resources/osx-light.css
+++ b/zoia_lib/UI/resources/osx-light.css
@@ -1,13 +1,3 @@
-QTabBar::tab:selected {
-    background-color: #a4bddb;
-    border-bottom: 0;
-    border-top-left-radius: 10px 5px;
-    border-top-right-radius: 10px 5px;
-    font: bold;
-    padding: 5px;
-    width: 200%;
-}
-
 QHeaderView {
     background-color: #ddd;
     color: #000;
@@ -18,32 +8,6 @@ QHeaderView::section:selected {
     color: #000;
 }
 
-QToolTip {
-    alternate-background-color: #fff;
-    background-color: #fff;
-    border: .1ex solid #eff0f1;
-    color: #000;
-    padding: .5ex;
-}
-
-QRadioButton {
-    color: #000;
-}
-
-QStatusBar {
-    color: #000;
-}
-
-QTabBar::tab:!selected {
-    background-color: #808080;
-    border-bottom: 0;
-    border-top-left-radius: 10px 5px;
-    border-top-right-radius: 10px 5px;
-    color: #FFF;
-    padding: 5px;
-    width: 200%;
-}
-
 QLineEdit {
     background-color: #FFF;
     border: 1px solid #000;
@@ -51,8 +15,40 @@ QLineEdit {
     padding: 1px 0 0;
 }
 
-QTabBar::tab:!selected:hover {
+QPushButton {
+    border-radius: 5px;
+    padding: 2px 2px 2px 2px;
+    border: 1px solid black;
+    color: #000;
+}
+
+QPushButton::enabled {
+    background-color: #fff;
+}
+
+QPushButton::!enabled {
+    background-color: #d9ebf9;
+}
+
+QTabBar::tab {
+    border-bottom: 0;
+    border-top-left-radius: 10px 5px;
+    border-top-right-radius: 10px 5px;
+    padding: 5px;
+    width: 200%;
+}
+
+QTabBar::tab:selected {
+    background-color: #a4bddb;
+    font: bold;
+}
+
+QTabBar::tab:!selected {
     background-color: #808080;
+    color: #FFF;
+    hover: {
+        background-color: #808080;
+    };
 }
 
 QTabWidget::tab-bar {
@@ -69,17 +65,29 @@ QTableView::item:selected {
     color: #000;
 }
 
-QMainWindow, QTableCornerButton::section, QTabBar {
-    background-color: #FFF;
+QToolTip {
+    alternate-background-color: #fff;
+    background-color: #fff;
+    border: .1ex solid #eff0f1;
+    color: #000;
+    padding: .5ex;
 }
 
-QTextBrowser, QTableView, QTreeWidget {
+QHeaderView::section, QMenuBar, QTableView, QTextBrowser, QTreeWidget {
     background-color: #FFF;
     color: #000;
 }
 
-QMenuBar, QHeaderView::section {
+QMainWindow, QTabBar, QTableCornerButton::section {
     background-color: #FFF;
+}
+
+QRadioButton, QStatusBar {
+    color: #000;
+}
+
+QSpinBox, QTreeView {
+    background-color: #d9ebf9;
     color: #000;
 }
 
